Implemented Requirements Up To 22
- Complete Rules
- TUI
- RMI
- Multiple Games

Started implementing GUI and Socket