@@ -1,28 +1,73 @@
 package it.polimi.ingsw.gc01.model.room;
 
-import java.util.*;
-
-import it.polimi.ingsw.gc01.model.ObserverManager;
 import it.polimi.ingsw.gc01.model.cards.*;
 import it.polimi.ingsw.gc01.model.decks.*;
 import it.polimi.ingsw.gc01.model.player.*;
+import it.polimi.ingsw.gc01.network.ObserverManager;
 
+import java.util.*;
+
+/**
+ * Class to manage the room
+ */
 public class Room {
+    /**
+     * Id of the room
+     */
     private final String roomId;
+    /**
+     * List of players in the room
+     */
     private final List<Player> players;
+    /**
+     * List of available colors in the room
+     */
+    private final List<PlayerColor> availableColors;
+    /**
+     * Deck of golden cards
+     */
+    private final GoldenDeck goldenDeck;
+    /**
+     * Deck of resource cards
+     */
+    private final ResourceDeck resourceDeck;
+    /**
+     * Deck of objective cards
+     */
+    private final ObjectiveDeck objectiveDeck;
+    /**
+     * Deck of starters cards
+     */
+    private final StarterDeck starterDeck;
+    /**
+     * List of common objectives
+     */
+    private final List<ObjectiveCard> commonObjectives;
+    /**
+     * Map of drawable cards
+     */
+    private final Map<TablePosition, ResourceCard> drawableCards;
+    /**
+     * Notifier object to communicate updates
+     */
+    private final ObserverManager notifier;
+    /**
+     * Current player of the room
+     */
     private Player currentPlayer;
-    private GoldenDeck goldenDeck;
-    private ResourceDeck resourceDeck;
-    private ObjectiveDeck objectiveDeck;
-    private StarterDeck starterDeck;
-    private List<ObjectiveCard> commonObjectives;
-    private Map<TablePosition, ResourceCard> drawableCards;
-    private ObserverManager notifier;
 
+    /**
+     * Constructs a new Room object
+     *
+     * @param roomId   The ID of the room.
+     * @param players  The list of players in the room.
+     * @param notifier The observer manager for managing observers related to this room.
+     */
     public Room(String roomId, List<Player> players, ObserverManager notifier) {
         this.roomId = roomId;
         this.players = players;
-        currentPlayer = players.get(0);
+        availableColors = new ArrayList<>(Arrays.asList(PlayerColor.values()));
+        currentPlayer = players.getFirst();
         goldenDeck = new GoldenDeck();
         resourceDeck = new ResourceDeck();
         objectiveDeck = new ObjectiveDeck();
@@ -31,10 +76,12 @@ public class Room {
         drawableCards = new HashMap<>();
         initTable();
         this.notifier = notifier;
+        notifier.startGame();
+        notifier.updateCurrentPlayer(currentPlayer.getName());
     }
 
     /**
-     * initiate the common playing field (decks and drawable cards)
+     * Initiate the common playing field (decks and drawable cards)
      */
     private void initTable() {
         goldenDeck.shuffle();
@@ -55,49 +102,93 @@ public class Room {
         commonObjectives.add(objectiveDeck.pick());
     }
 
+    /**
+     * @return the roomId
+     */
     public String getRoomId() {
         return roomId;
     }
 
+    /**
+     * @return the list of the players in the room
+     */
     public List<Player> getPlayers() {
         return players;
     }
 
+    /**
+     * @return the list of available colors to get picked
+     */
+    public List<PlayerColor> getAvailableColors() {
+        return availableColors;
+    }
+
+    /**
+     * @return the current player
+     */
     public Player getCurrentPlayer() {
         return currentPlayer;
     }
 
+    /**
+     * @param currentPlayer player to be set as currentplayer
+     */
+    public void setCurrentPlayer(Player currentPlayer) {
+        this.currentPlayer = currentPlayer;
+        notifier.updateCurrentPlayer(currentPlayer.getName());
+    }
+
+    /**
+     * @return the starter Deck of the game
+     */
     public StarterDeck getStarterDeck() {
         return starterDeck;
     }
 
+    /**
+     * @return the resourceDeck of the game
+     */
     public ResourceDeck getResourceDeck() {
         return resourceDeck;
     }
 
+    /**
+     * @return the golden Deck of the game
+     */
     public GoldenDeck getGoldenDeck() {
         return goldenDeck;
     }
 
+    /**
+     * @return the objectiveDeck of the game
+     */
     public ObjectiveDeck getObjectiveDeck() {
         return objectiveDeck;
     }
 
+    /**
+     * @return the commonObjectives of the game
+     */
     public List<ObjectiveCard> getCommonObjectives() {
         return commonObjectives;
     }
 
+    /**
+     * @return The observer manager associated with the room.
+     */
     public ObserverManager getNotifier() {
         return notifier;
     }
 
-    public void setCurrentPlayer(Player currentPlayer) {
-        this.currentPlayer = currentPlayer;
-    }
-
-    public Player getPlayerByName(String playerName){
-        for (Player player : players){
-            if (player.getName().equals(playerName)){
+    /**
+     * Retrieves a player from the room by their name.
+     *
+     * @param playerName The name of the player to retrieve.
+     * @return The player with the specified name
+     */
+    public Player getPlayerByName(String playerName) {
+        for (Player player : players) {
+            if (player.getName().equals(playerName)) {
                 return player;
             }
         }
@@ -106,15 +197,17 @@ public class Room {
 
     /**
      * Return the next player
+     *
      * @return the next player
      */
     public Player getNextPlayer() {
         int currentPlayerIndex = players.indexOf(getCurrentPlayer());
-        return currentPlayerIndex == players.size() - 1 ? players.get(0) : players.get(currentPlayerIndex+1);
+        return currentPlayerIndex == players.size() - 1 ? players.get(0) : players.get(currentPlayerIndex + 1);
     }
 
     /**
      * Return the Map of drawable cards: the four in the center + the two on top of the decks
+     *
      * @return the Map of drawable cards
      */
     public Map<TablePosition, ResourceCard> getDrawableCards() {
@@ -123,6 +216,7 @@ public class Room {
 
     /**
      * Get the game winners
+     *
      * @return the list of winners
      */
     public List<Player> getWinners() {
@@ -143,7 +237,7 @@ public class Room {
      *
      * @param player the player to remove
      */
-    public void removePlayer(Player player){
+    public void removePlayer(Player player) {
         players.remove(player);
     }
 }
